# MappingLibrary_2021

./: .gitignore  Dockerfile  License  Makefile.win  README.md  installation_notes.md  move_binaries.txt
Foreign/: Makefile.linux  Makefile.win
Foreign/ANN/: ANN.cbp  ANN.depend  ANN.dev  Makefile_linux  ann.diff
Foreign/ANN/ann2fig/: ann2fig.cpp
Foreign/ANN/src/: ANN.cpp
Foreign/ENLSIP/: ENLSIP.dev  ENLSIPFitting.cc  ENLSIPFitting.h  Makefile_ENLSIP_linux  ShMacro.h  dblTest.cc  dblenls.c  dblmod2nls.c  dblredunls.c  dblwrkset.c
Foreign/Eispack/: Eispack.dev  Makefile_Eispack.linux  Makefile_Eispack.win
Foreign/Eispack/src/: bakvec.f  balanc.f  balbak.f  bandr.f  bandv.f  bisect.f  bqr.f  cbabk2.f  cbal.f  cg.f  ch.f  cinvit.f  (+58 more)
Foreign/Linpack/: Linpack.dev  Makefile_Linpack.linux  Makefile_Linpack.win
Foreign/newmat/: Makefile_linux
Tools/: .gitignore  Makefile.win
Tools/build-pano2lidar-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Tools/change_detection/: Makefile.win
Tools/coordinate_transform/: Makefile.win
Tools/filtering/: Makefile.win
Tools/image_conversion/: Makefile.win
Tools/image_orientation/: Makefile.win
Tools/image_processing/: Makefile.win
Tools/indoor_geometry_reconstrcution_v2/: .gitignore
Tools/indoor_geometry_reconstrcution_v2/permanent_structure_detection/: CMakeLists.txt  README.md  data_preparation.cpp  indoorTopology_v1.cpp  indoorTopology_v2.cpp  indoorTopology_v2.h  indoor_reconstruction.h  main.cpp  setConsoleColor.cpp
Tools/indoor_geometry_reconstruction_v2/: .gitignore
Tools/indoor_geometry_reconstruction_v2/cell_decomposition/: .gitignore  CMakeLists.txt  ReadAscii.cpp  ReadMe.md  ReadMe.md.autosave  alpha_shape.cpp  alpha_shape.h  cgal_ransac.cpp  face_selection.cpp  face_selection.h  intersecting_clippers.cpp  intersecting_clippers.h  main.cpp  main_pipeline.cpp  main_pipeline.h  occupancy_grid.cpp  planar_ransac.cpp  planar_ransac.h  planar_segmentation.cpp  planar_segmentation.h  sample_laserpoints.cpp  sample_laserpoints.h
Tools/indoor_geometry_reconstruction_v2/cgal_polyfit/polyfit/: CMakeLists.txt  main.cpp
Tools/indoor_geometry_reconstruction_v2/cgal_shape_detection/: CMakeLists.txt  main.cpp  planar_ransac.cpp  planar_ransac.h  shapeDetection_cgal.cpp  shapeDetection_cgal.h
Tools/indoor_geometry_reconstruction_v2/experiments/segmentation/: CMakeLists.txt
Tools/indoor_geometry_reconstruction_v2/experiments/segmentation/include/: segmentation.h
Tools/indoor_geometry_reconstruction_v2/experiments/segmentation/src/: CMakeLists.txt  segmentation.cpp
Tools/indoor_geometry_reconstruction_v2/experiments/segmentation/test/: CMakeLists.txt  main.cpp
Tools/indoor_geometry_reconstruction_v2/experiments/surfacegrowing/: CMakeLists.txt  main.cpp  surfacegrowing_test.cpp
Tools/indoor_geometry_reconstruction_v2/experiments/test/: CMakeLists.txt  main_all.cpp  test_laserpointsInfo.cpp  test_linetopologies2off.cpp  test_mergeSegmentFiles.cpp
Tools/indoor_geometry_reconstruction_v2/geometry_modeling/deprecated_cmake_build/: CMakeLists.txt  CMakeLists_addExe.txt  CMakeLists_addLib.txt  main.cpp  main_all.cpp  test_mergeSegFiles.cpp
Tools/indoor_geometry_reconstruction_v2/geometry_modeling/extend2slabs/: CMakeLists.txt  extend2slabs.cpp
Tools/indoor_geometry_reconstruction_v2/modeling_pipeline/: CMakeLists.txt  ReadAscii.cpp  main.cpp  modeling_pipeline.cpp  modeling_pipeline.h  planar_segmentation.cpp
Tools/indoor_geometry_reconstruction_v2/modeling_pipeline/.cmake/api/v1/reply/: cache-v2-0d817f2285e8b508af39.json  cmakeFiles-v1-dfcc238cea5ef4212352.json  codemodel-v2-087c06a687044081724b.json  index-2021-08-19T13-47-48-0525.json  target-3dmodeling-Debug-39980cc255aaec5abc6a.json
Tools/indoor_geometry_reconstruction_v2/permanent_structure_detection/: CMakeLists.txt  README.md  indoorTopology_v2.cpp  indoorTopology_v2.h  main.cpp
Tools/indoor_geometry_reconstruction_v2/permanent_structure_detection/test/: README.md
Tools/indoor_geometry_reconstruction_v2/tools/: CMakeLists.txt
Tools/indoor_geometry_reconstruction_v2/tools/include/: utils.h  visualization_tools.h
Tools/indoor_geometry_reconstruction_v2/tools/src/: CMakeLists.txt  Directory_Processing.cpp  FilterSegmentsByTime.cpp  GenerateWallPatches.cpp  MLS_preprocessing.cpp  MergeSurfaces.cpp  Min3DBox_OFF.cpp  Minimum3DBox.cpp  Minimum3DRectangle.cpp  Offset_Polygons.cpp  Project2Plane.cpp  VisualizePlanes.cpp  post_processing.cpp
Tools/indoor_geometry_reconstruction_v2/tools/test/: main_all.cpp  test_laserpointsInfo.cpp
Tools/indoor_geometry_reconstruction_v2/utils/: Buffers.h  CMakeLists.txt  GenerateWallPatches.cpp  MLS_preprocessing.cpp  MergeSurfaces.cpp  main.cpp  post_processing.cpp  setConsoleColor.cpp  utils.h
Tools/indoor_geometry_reconstruction_v2/visualization_tools/: CMakeLists.txt  GenerateConvexPolygon.cpp  Min3DBox_OFF.cpp  Minimum3DBox.cpp  Minimum3DRectangle.cpp  Offset_Polygons.cpp  VisualizePlanes.cpp  main.cpp  visualization_tools.h
Tools/landscape_modelling/: Makefile.win
Tools/miscellaneous/: Makefile.win
Tools/miscellaneous/roadasset_tests/trafficsigns/: CMakeLists.txt  main.cpp  pole_decomposition.cpp  pole_decomposition.h  poledetection.cpp  poledetection.h  poles.cc  shapeDetection_cgal.cpp
Tools/ortho_rectification/: Makefile.win
Tools/pano2lidar/: CMakeLists.txt  equi_proj.cpp  image_coords.txt  image_locations.csv  lidar_projection.cpp  lidar_projection.h  main.cpp
Tools/point_cloud_classification/: Makefile.win
Tools/point_cloud_imaging/: Makefile.win
Tools/point_cloud_information/: Makefile.win
Tools/point_cloud_management/: Makefile.win
Tools/point_cloud_segmentation/: Makefile.win
Tools/quality_control/: Makefile.win
Tools/rail_road_modeling/: Makefile.win
Tools/road_modelling/: Makefile.win
Tools/sensor_fusion/lidar2panorama_kaios/: CMakeLists.txt  CMakeLists.txt.user.ec4f10b  equi_proj.cpp  lidar_projection.cpp  lidar_projection.h  main.cpp
Tools/strip_processing/: Makefile.win
Tools/visualization_tools/: MinimumRectangle3D.cpp
(+1320 files in other folders)
